ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1/input.ts:1:5
  |
1 | var export;
  |     ^^^^^^

